--- a/Example/Droid/DynamicWrapLayoutExample.Droid.csproj
+++ b/Example/Droid/DynamicWrapLayoutExample.Droid.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\src\SuaveControls\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.props" Condition="Exists('..\..\src\SuaveControls\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.props')" />
   <PropertyGroup>
@@ -129,13 +129,13 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\SuaveControls\SuaveControls\SuaveControls.DynamicWrapLayout.csproj">
+      <Project>{2f10d38f-0570-45e3-a017-44240bf4a71d}</Project>
+      <Name>SuaveControls.DynamicWrapLayout</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DynamicWrapLayoutExample\DynamicWrapLayoutExample.csproj">
       <Project>{16C423B2-493F-470C-B12C-CE4F49C6C772}</Project>
       <Name>DynamicWrapLayoutExample</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\src\SuaveControls\SuaveControls\SuaveControls.DynamicWrapLayout.csproj">
-      <Project>{1E1749E5-7858-4656-A13B-890E9C5BFFF8}</Project>
-      <Name>SuaveControls.DynamicWrapLayout</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
